# rusty

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
src/app/commands/: daily.rs  doctor.rs  edit.rs  mod.rs  new.rs  quick.rs  recent.rs  search.rs  show.rs  tui.rs
src/core/: config.rs  editor.rs  index.rs  links.rs  metadata.rs  mod.rs  note.rs  query.rs  store.rs
src/tui/: app.rs  event.rs  mod.rs  render.rs  state.rs
src/util/: fs.rs  mod.rs  slug.rs  text.rs  time.rs
tests/: phase1_store.rs  phase2_cli.rs  phase3_search.rs  phase5_doctor.rs
