[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
toml = "0.8"
uuid = { version = "1.8", features = ["v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
